Fixes #9: Forcing Line Breaks in Non-Breakable Text

--- a/sources/static/css/style.scss
+++ b/sources/static/css/style.scss
@@ -203,7 +203,9 @@ body{
               }
             }
           }
-          
+          li{
+            word-wrap: break-word;
+          }
           
         }
 
